deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: data-product-system
  labels:
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
