deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-product-controller
spec:
  selector:
    app.kubernetes.io/name: data-product-controller
  ports:
    - name: http
      port: 80
      targetPort: registry
